--- a/css/side_bar.css
+++ b/css/side_bar.css
@@ -1,20 +1,20 @@
+a:hover {
+  text-decoration: none;
+}
 
-.sidebar-container {
-    position: fixed;
-    width: 220px;
-    height: 100%;
-    left: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    background: #1a1a1a;
-    color: #fff;
-  }
-  
-  .content-container {
-    padding-top: 20px;
-  }
-  
-  .sidebar-logo {
+.sidebar-container,
+aside {
+  position: fixed;
+  width: 220px;
+  height: 100%;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background: #1a1a1a;
+  color: #fff;
+}
+
+/* .sidebar-logo {
     padding: 8px 10px 8px 10px;
     font-size: 20px;
     background-color: rgb(79, 221, 60);
@@ -23,67 +23,106 @@
     font-weight: 500;
     color: #ffffff;
   }
-  
-  .sidebar-navigation {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    position: relative;
-  }
-  
-  .sidebar-navigation li {
-    background-color: transparent;
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    line-height: 20px;
-  }
-  
-  .sidebar-navigation li a {
-    padding: 10px 15px 10px 30px;
-    display: block;
-    color: #fff;
-  }
-  
-  .sidebar-navigation li .fa {
-    margin-right: 10px;
-  }
-  
-  .sidebar-navigation li a:active,
-  .sidebar-navigation li a:hover,
-  .sidebar-navigation li a:focus {
-    text-decoration: none;
-    outline: none;
-  }
-  
-  .sidebar-navigation li::before {
-    background-color: rgb(79, 221, 60);
-    position: absolute;
-    content: '';
-    height: 100%;
-    left: 0;
-    top: 0;
-    -webkit-transition: width 0.2s ease-in;
-    transition: width 0.2s ease-in;
-    width: 3px;
-    z-index: -1;
-  }
-  
-  .sidebar-navigation li:hover::before {
-    width: 100%;
-  }
-  
-  .sidebar-navigation .header {
-    font-size: 12px;
-    text-transform: uppercase;
-    background-color: #151515;
-    padding: 10px 15px 10px 30px;
-  }
-  
-  .sidebar-navigation .header::before {
-    background-color: transparent;
-  }
-  
-  .content-container {
-    padding-left: 220px;
-  }
+   */
+
+.list-sidebar {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  position: relative;
+}
+
+.list-sidebar li {
+  background-color: transparent;
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  line-height: 20px;
+}
+
+.list-sidebar li a {
+  padding: 10px 15px 10px 30px;
+  display: block;
+  color: #fff;
+}
+
+.list-sidebar li .fa {
+  margin-right: 10px;
+}
+
+.list-sidebar li a:active,
+.list-sidebar li a:hover,
+.list-sidebar li a:focus {
+  text-decoration: none;
+  outline: none;
+}
+
+.list-sidebar > li::before {
+  background-color: rgb(79, 221, 60);
+  position: absolute;
+  content: "";
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 3px;
+  z-index: -1;
+}
+
+.list-sidebar > li:hover::before {
+  -webkit-transition: width 0.3s ease-in;
+  transition: width 0.3s ease-in;
+  width: 100%;
+}
+
+.list-sidebar > li ul li::before {
+  background-color: rgb(233, 56, 56);
+  position: absolute;
+  content: "";
+  height: 100%;
+  left: -40px;
+  top: 0;
+  width: 3px;
+  z-index: -1;
+}
+
+.list-sidebar > li ul li:hover::before {
+  background-color: rgb(233, 56, 56);
+  width: 200%;
+  -webkit-transition: width 0.3s ease-in;
+  transition: width 0.3s ease-in;
+}
+
+.list-sidebar .header {
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: #151515;
+  padding: 10px 15px 10px 30px;
+}
+
+.list-sidebar .header::before {
+  background-color: transparent;
+}
+
+a[aria-expanded="true"] {
+  background-color: rgb(79, 221, 60);
+}
+
+a[aria-expanded="true"]::after {
+  font-family: FontAwesome;
+  font-weight: 900;
+  content: "\f107";
+  display: block;
+  position: absolute;
+  right: 15px;
+  top: 9px;
+}
+
+a[aria-expanded="false"]::after {
+  font-family: FontAwesome;
+  font-weight: 900;
+  content: "\f104";
+  display: block;
+  position: absolute;
+  right: 15px;
+  top: 9px;
+}
