--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,12 @@ footer {
     font-size: 15px;
     background: rgb(79, 221, 60);
     color: white;
+
+    height: 20%;
+    width: 100%;
+    position: fixed;
+    margin-top: 100%;
+
 }
 
 #github {
@@ -13,4 +19,3 @@ footer {
     font-size: 150%;
     color: rgb(218, 53, 53);
 }
-
