--- a/css/news.css
+++ b/css/news.css
@@ -6,14 +6,15 @@ div.bhoechie-tab-container {
   border-radius: 4px;
   -moz-border-radius: 4px;
   border: 1px solid #ddd;
-  margin-top: 20px;
-  margin-left: 50px;
+  margin-top: 300px;
+  margin-left: 0px; 
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
   opacity: 0.97;
   filter: alpha(opacity=97);
+  position: static;
 }
 div.bhoechie-tab-menu {
   padding-right: 0;
@@ -47,7 +48,7 @@ div.bhoechie-tab-menu div.list-group > a.active .fa {
 }
 div.bhoechie-tab-menu div.list-group > a.active:after {
   content: "";
-  position: absolute;
+  position: relative;
   left: 100%;
   top: 50%;
   margin-top: -13px;
