--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,34 @@
 .right-side {
-    margin-left: 230px !important;
-    width: 100% !important;
+  margin-left: 230px !important;
+  width: 100% !important;
 }
 
 .header {
-    height: 20%;
-    position: -webkit-sticky;
-    position: -moz-sticky;
-    position: -ms-sticky;
-    position: -o-sticky;
-    position: sticky;
-    top: 0px;
+  height: 20%;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+  position: sticky;
+  top: 0px;
 }
 
 .main {
-    height: 60%;
+  height: 100%;
 }
 
 .footer {
-    height: 20%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
 
+.calender {
+  height: 70%;
+  width: 70%;
+}
+
+.news {
+  top: 100px;
+}
