--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,11 @@
 footer {
-    font-size: 15px;
     background: rgb(79, 221, 60);
     color: white;
-
+    bottom: 0;
     height: 20%;
     width: 100%;
     position: fixed;
-    margin-top: 100%;
+    margin-top: 61%;
 
 }
 
