--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@ footer {
     background: rgb(79, 221, 60);
     color: white;
     bottom: 0;
-    height: 20%;
+    /* height: 20%; */
     width: 100%;
     position: fixed;
     margin-top: 61%;
@@ -15,6 +15,5 @@ footer {
 }
 
 #github:hover {
-    font-size: 150%;
     color: rgb(218, 53, 53);
 }
