--- a/css/header.css
+++ b/css/header.css
@@ -1,19 +1,18 @@
 header {
-    background-color: rgb(79, 221, 60);
-    font-size: 16px;
-    width: 100%;
+  background-color: rgb(79, 221, 60);
+  font-size: 16px;
+  width: 100%;
+  top: 0;
 }
 
 #nav {
-    margin-bottom: 0px !important;
+  margin-bottom: 0px !important;
 }
 
-
 .nav-link:hover {
-    color: white !important;
+  color: white !important;
 }
 
 .modal-backdrop {
-    z-index: -1;
-  }
-
+  z-index: -1;
+}
