--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@
   position: -ms-sticky;
   position: -o-sticky;
   position: sticky;
-  top: 0px;
+  top: 0;
+  width: 100%;
 }
 
 .main {
@@ -25,8 +26,8 @@
 }
 
 .calender {
-  height: 70%;
-  width: 70%;
+  height: 70% !important;
+  width: 70% !important;
 }
 
 .news {
